[project]
name = "actions-releases"
description = "GitHub Actions Workflows for Releases"
version = "4.3.1"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]
readme = "README.md"

requires-python = "==3.13.*"

dependencies = [
    "commitizen ==4.6.2",
    "pre-commit >=4.0.0, <5.0.0",
]

[tool.commitizen]
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true
