[project]
name = "actions-releases"
description = "GitHub Actions Workflows for Releases"
version = "5.3.8"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]
readme = "README.md"

requires-python = "==3.14.4"

dependencies = [
    "commitizen ==4.13.10",
    "pre-commit ==4.5.1",
]

[tool.commitizen]
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true
